K1J-1587: Handle null scenarios for diagnosis code and partial work capacities.